# Syslog-Server

./: Cargo.toml  README.md  debcargo.toml
rust-syslog-server-0.1.0/: .cargo_vcs_info.json  Cargo.toml
rust-syslog-server-0.1.0/debian/: cargo-checksum.json  changelog  control  copyright  watch
rust-syslog-server-0.1.0/src/helper/: run_command.rs
rust-syslog-server-0.1.0/src/utils/: mod.rs
rust-syslog-server-0.1.0/src/utils/menu/: get_rsyslog_config.rs
src/: main.rs
src/helper/: add_config_user.rs  add_line_file.rs  config_desktop.rs  handle_user_interaction.rs  mod.rs  print_cmd.rs  read_config.rs  run_command.rs  system_helper.rs  timer.rs  write_file.rs
src/helper/config/: config_basic_cmd.rs  config_boot.rs  config_cleanup_log.rs  config_client.rs  config_desktop.rs  config_logrotate.rs  config_pam_rsyslog.rs  config_rsyslog_server.rs  mod.rs
src/helper/system/: basic_commands.rs  create_cronjob.rs  create_parent_dir.rs  free_cache_ram.rs  mod.rs  move_file.rs  script_permission.rs  server_ip.rs  system_helper.rs  test_logrotate.rs
src/utils/: mod.rs
src/utils/client/: free_cache_ram_cronjob.rs  linux_cli.rs  mod.rs
src/utils/install/: install_depends.rs  mod.rs
src/utils/menu/: add_log_tools.rs  change_boot_menu.rs  config_server.rs  desktop_install_menu.rs  firewall_menu.rs  get_rsyslog_config.rs  logrotate.rs  mod.rs
