[package]
name = "syslog-server"
version = "0.1.0"
edition = "2024"
authors = ["Elias Mörz <dein.name@example.com>"]
description = "Ein einfaches Beispiel-Tool für Debian"
license = "Apache-2.0"

[profile.release]
opt-level = "z"     # Optimiert auf die kleinstmögliche Dateigröße
lto = true          # Link Time Optimization (entfernt ungenutzten Code über Crates hinweg)
codegen-units = 1   # Verhindert paralleles Kompilieren, ermöglicht aber bessere Optimierung
panic = "abort"     # Entfernt den Code für Stack-Unwinding (spart viel Platz)
strip = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
